# optimed

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  configure  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/workflows/: apisec-scan.yml  bandit.yml  makefile.yml
documents/: readme_image_module.md  readme_module_calculations.md  readme_module_convert.md  readme_module_crop.md  readme_module_nifti.md  readme_module_nrrd.md  readme_module_numpy.md  readme_module_operations.md  readme_module_postprocess.md  readme_module_preview.md  readme_module_resample.md  readme_modules.md
optimed/: __init__.py
optimed/processes/: convert.py  crop.py  image.py  postprocess.py  preview.py  resample.py
optimed/wrappers/: calculations.py  nibabel.py  nifti.py  nrrd.py  numpy.py  operations.py
tests/: test_calculations_utils.py  test_convert.py  test_convert_utils.py  test_crop.py  test_crop_utils.py  test_image_utils.py  test_nifti_utils.py  test_numpy_utils.py  test_operation_utils.py  test_postprocess_utils.py  test_resample_utils.py
