[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "optimed"
version = "1.0.0a1"
description = "Optimed"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Roman Fitzjalen", email = "info@bluemind.co" }
]
dependencies = [
    "numpy==1.26.3",
    "nibabel==5.2.1",
    "slicerio==1.1.2",
    "SimpleITK==2.4.1",
    "pyyaml==6.0.2",
    "xmltodict==0.14.2",
    "scipy==1.13.1",
    "pynrrd==1.0.0",
    "joblib==1.4.2",
    "scikit-image==0.24.0",
    "psutil==5.9.8",
    "vtk==9.4.1",
    "coverage==7.6.12",
    "pre-commit==4.1.0"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://github.com/bluemindai/optimed.git"
"Issues" = "https://github.com/bluemindai/optimed/issues"

[tool.setuptools.packages.find]
exclude = [".venv-optimed", ".vscode", ".history", "local", ".github"]

[tool.codespell]
skip = '.git,*.pdf,*.svg'

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x==13.0.0; platform_system != 'Darwin'",
    "pylibraft-cu12==24.8.1; platform_system != 'Darwin'"
]
