[build-system]
requires = ["hatchling==1.26.3", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "optimed"
version = "1.0.0a4"
description = "Optimed"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Roman Fitzjalen", email = "info@bluemind.co" }
]
dependencies = [
    "numpy==2.3.3",
    "nibabel==5.3.2",
    "slicerio==1.1.2",
    "SimpleITK==2.5.2",
    "pyyaml==6.0.2",
    "xmltodict==0.14.2",
    "scipy==1.16.1",
    "pynrrd==1.1.3",
    "joblib==1.4.2",
    "scikit-image==0.25.2",
    "psutil==5.9.8",
    "vtk==9.5.2",
    "coverage==7.6.12",
    "pre-commit==4.1.0"
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://github.com/bluemindai/optimed.git"
"Issues" = "https://github.com/bluemindai/optimed/issues"

[tool.setuptools.packages.find]
exclude = [".venv-optimed", ".vscode", ".history", "local", ".github"]

[tool.codespell]
skip = '.git,*.pdf,*.svg'

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x==13.0.0; platform_system != 'Darwin'",
    "pylibraft-cu12==24.8.1; platform_system != 'Darwin'"
]
